# Agnostic

./: .dockerignore  .env.example  .env.prod  .env.test  .gitignore  .pre-commit-config.yaml  AGENTS_INDEX.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  DOCUMENTATION_AUDIT.md  KUBERNETES_DEPLOYMENT.md  LICENSE  PROJECT_COMPLETION.md  README.md  ROADMAP.md  TODO.md  WEBGUI_ENHANCEMENTS.md  add_type_hints.py  check_type_coverage.py  demonstrate_llm_integration.py  docker-compose.build.yml  docker-compose.dev.yml  docker-compose.logging.yml  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.tls.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.in  requirements.txt  run_tests.py  test_env_config.py  update_agents_env.py  update_all_env.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-cd.yml  dependency-update.yml
.venv312/: pyvenv.cfg
advanced_testing/: __init__.py  self_healing_fuzzy_verification.py
agentic/: .env.example  README.md  __init__.py  docker-compose.prod.yml  docker-compose.yml
agentic/advanced_testing/: risk_prioritization_exploratory.py
agentic/agents/accessibility/: Dockerfile
agentic/agents/analyst/: Dockerfile
agentic/agents/api/: qa_api.py
agentic/agents/chaos/: qa_chaos.py
agentic/agents/compliance/: Dockerfile
agentic/agents/junior/: Dockerfile  junior_qa.py
agentic/agents/manager/: qa_manager.py
agentic/agents/mobile/: qa_mobile.py
agentic/config/: model_manager.py  universal_llm_adapter.py
agentic/examples/: api_testing_example.json  demo_script.py
agentic/nginx/: nginx.conf
agentic/scripts/: ssl_setup.sh
agentic/webgui/: Dockerfile  app.py
agents/accessibility/: qa_accessibility.py
agents/analyst/: Dockerfile  README.md  qa_analyst.py
agents/api/: Dockerfile  qa_api.py
agents/chaos/: Dockerfile  qa_chaos.py
agents/compliance/: qa_compliance.py
agents/junior/: Dockerfile  README.md  junior_qa.py
agents/manager/: Dockerfile  OPTIMIZED_MANAGER_README.md  README.md  qa_manager.py  qa_manager_optimized.py
agents/mobile/: Dockerfile  qa_mobile.py
agents/performance/: Dockerfile  README.md  qa_performance.py
agents/resilience/: Dockerfile  README.md  qa_resilience.py
agents/security_compliance/: Dockerfile  README.md  qa_security_compliance.py
agents/senior/: Dockerfile  README.md  senior_qa.py
agents/sre/: Dockerfile  qa_sre.py
agents/user_experience/: Dockerfile  README.md  qa_user_experience.py
certs/: generate-certs.sh
config/: agent_registry.py  environment.py  llm_integration.py  model_manager.py  models.json  team_config.json  team_config_loader.py  testing_targets.json  universal_llm_adapter.py
doc/: README.md
doc/agents/: index.md
doc/deployment/: docker-compose.md
doc/development/: contributing.md
doc/project/: changelog.md  roadmap.md
docker/: Dockerfile.base  README.md
docs/: DOCUMENTATION_UPDATES.md  README.md  SECURITY.md
docs/adr/: 001-agent-architecture.md  001-webgui-technology-stack.md  002-llm-integration.md  002-realtime-communication-infrastructure.md  003-deployment-strategy.md  003-session-management-architecture.md  004-report-generation-strategy.md  004-webgui-architecture.md  005-authentication-authorization-design.md  005-security-strategy.md  006-agent-architecture.md  007-llm-integration.md  008-deployment-strategy.md  009-webgui-architecture.md  010-security-strategy.md  011-scalable-team-architecture.md  012-testing-strategy.md  013-plugin-architecture.md  014-webgui-rest-api.md  015-observability-stack.md  016-communication-hardening.md  017-rest-task-submission-api-keys.md  018-webhook-callbacks-cors.md  019-a2a-protocol.md  020-kubernetes-production-readiness.md  021-agnosticos-integration.md  README.md
docs/agents/: index.md
docs/api/: agents.md  llm_integration.md  webgui.md
docs/audits/: 2026-02-11-code-docs-audit.md  2026-02-16-docs-test-audit.md
docs/deployment/: agnosticos.md  docker-compose.md  kubernetes.md
docs/development/: contributing.md  dependency-watch.md  setup.md
docs/getting-started/: quick-start.md
docs/guides/: quick-start.md
docs/project/: changelog.md  roadmap.md
examples/: ecommerce_checkout_testing.json
k8s/: kustomization.yaml
k8s/helm/agentic-qa/: Chart.yaml  README.md  values-dev.yaml  values-prod.yaml  values.yaml
k8s/helm/agentic-qa/templates/: _helpers.tpl  configmap.yaml  hpa.yaml  ingress.yaml  junior-qa.yaml  namespace.yaml  network-policy.yaml  pdb.yaml  performance.yaml  qa-analyst.yaml  qa-manager.yaml  rabbitmq.yaml  redis.yaml  resource-quota.yaml  secret.yaml  (+4 more)
k8s/manifests/: config.yaml  horizontal-pod-autoscalers.yaml  ingress.yaml  namespace.yaml  network-policies.yaml  pod-disruption-budgets.yaml  qa-agents-1.yaml  qa-agents-2.yaml  qa-agents-3.yaml  qa-manager.yaml  rabbitmq.yaml  redis.yaml  resource-quota.yaml  webgui.yaml
logging/: logstash.conf
monitoring/: alertmanager.yml  prometheus.yml
scripts/: build-docker.sh  export-openapi.py  smoke_tests.py
shared/: crewai_compat.py  data_generation_optimization.md  data_generation_service.py  logging_config.py  metrics.py  resilience.py
tests/fixtures/: common.py
tests/integration/: test_agent_communication.py
tests/k8s/: test_k8s_manifests.py
tests/unit/: conftest.py  test_agent_registry.py  test_config_environment.py  test_junior_qa_tools.py  test_logging_config.py  test_metrics.py  test_model_manager.py  test_performance_tools.py  test_qa_analyst_tools.py  test_qa_manager_tools.py  test_resilience.py  test_security_compliance_tools.py  test_senior_qa_tools.py  test_webgui_api.py  test_webgui_auth.py  test_webgui_exports.py  test_webgui_tasks.py
tls/rabbitmq/: rabbitmq.conf
webgui/: Dockerfile  __init__.py  agent_monitor.py  api.py  app.py  auth.py  dashboard.py  exports.py  history.py  realtime.py
webgui/static/css/: dashboard.css  realtime.css  reports.css
webgui/static/js/: dashboard.js
webgui/static/templates/: dashboard.html
(+1 files in other folders)
