[build-system]
requires = ["setuptools>=65", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "agnostic-qa-system"
version = "1.0.0"
description = "Agentic QA Team System - Containerized, multi-agent QA platform powered by CrewAI"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Agentic QA Team", email = "qa@example.com"}
]
maintainers = [
    {name = "Agentic QA Team", email = "qa@example.com"}
]
keywords = [
    "testing",
    "quality-assurance", 
    "automation",
    "ai-agents",
    "crewai",
    "multi-agent",
    "containerized",
    "devops",
    "ci-cd"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Software Distribution",
    "Typing :: Typed",
]
requires-python = ">=3.11"
dependencies = [
    "crewai>=0.75.0",
    "langchain>=0.2.16",
    "redis>=5.0.8",
    "celery>=5.4.0",
    "pytest>=8.3.2",
]

[project.optional-dependencies]
dev = [
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "black>=24.8.0",
    "ruff>=0.5.7",
    "isort>=5.13.2",
    "mypy>=1.11.2",
    "pre-commit>=3.8.0",
    "bandit>=1.7.6",
    "safety>=3.2.4",
]
docs = [
    "sphinx>=8.0.2",
    "sphinx-rtd-theme>=2.0.0",
]
test = [
    "pytest-playwright>=0.5.2",
    "pytest-asyncio>=0.23.8",
    "pytest-xdist>=3.6.1",
]
web = [
    "chainlit>=1.1.304",
    "fastapi>=0.112.0",
    "uvicorn>=0.30.5",
    "websockets>=12.0",
]
ml = [
    "numpy>=1.26.4",
    "pandas>=2.2.2",
    "scikit-learn>=1.5.1",
    "opencv-python>=4.10.0.84",
]
browser = [
    "playwright>=1.45.0",
]

[project.urls]
Homepage = "https://github.com/your-org/agnostic-qa-system"
Documentation = "https://agnostic-qa-system.readthedocs.io/"
Repository = "https://github.com/your-org/agnostic-qa-system"
"Bug Tracker" = "https://github.com/your-org/agnostic-qa-system/issues"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config", 
    "--tb=short",
    "--verbose",
]
markers = [
    "unit: marks tests as unit tests (fast, no external dependencies)",
    "integration: marks tests as integration tests (require external services)",
    "slow: marks tests as slow running",
    "redis: marks tests that require Redis",
    "rabbitmq: marks tests that require RabbitMQ",
    "security: marks tests related to security scanning",
]

[tool.ruff]
line-length = 88
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "RUF", # Ruff-specific rules
    "TCH", # Type-checking imports
    "PTH", # Use pathlib
    "PERF", # Performance optimizations
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "RUF012", # Mutable class default
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
hide_error_context = false
color_output = true
error_summary = true

[[tool.mypy.overrides]]
module = [
    "crewai.*",
    "langchain.*",
    "redis.*",
    "celery.*",
    "chainlit.*",
    "playwright.*",
    "cv2.*",
    "sklearn.*",
    "faker.*",
    "pytest.*",
    "aiohttp.*",
    "pandas.*",
    "numpy.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["agents", "config", "shared", "webgui"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/.*",
    "*/migrations/*",
    "*/venv/*",
    "*/env/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "@overload",
]
show_missing = true
precision = 2
skip_covered = false
skip_empty = true

[tool.coverage.html]
directory = "htmlcov"
skip_covered = false

[tool.bandit]
exclude_dirs = ["tests", "test_*"]
skips = ["B101", "B601"]